<resources>
    <string name="app_name">全坪通</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="permission_deny">拒绝</string>
    <string name="permission_confirm">去授权</string>
    <string name="activate_service_scan_tip">将二维码放入框内，即可自动扫描</string>
    <string name="activate_service_input_code">输入激活码激活</string>
    <string name="activate_service">二维码</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="info_detail">信息详情</string>
    <string name="warning_record">报警记录</string>
    <string name="check_location">查车定位</string>
    <string name="wb">维保</string>
    <string name="login">登录</string>
    <string name="login_company_name">耀塔科技</string>
    <string name="login_input_username">请输入工号/名称</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_save_username">保存用户名</string>
    <string name="login_bottom_company_name">\@成都耀塔科技有限公司版权所有</string>
    <string name="info_detail_title">信息详情</string>
    <string name="info_detail_username_tip">工号：</string>
    <string name="info_detail_bind">绑定</string>
    <string name="info_detail_unbind">解绑</string>
    <string name="info_detail_wxby">维修/保养</string>
    <string name="info_detail_wbgh">维保归还</string>
    <string name="info_detail_use_warning">领用报警</string>
    <string name="info_detail_timeout_warning">超时报警</string>
    <string name="info_detail_stop_warning">停放报警</string>
    <string name="info_detail_outofindex_warning">越界报警</string>
    <string name="detail">详情</string>
    <string name="scan_title">扫码领用/归还</string>
    <string name="scan_hint">或</string>
    <string name="scan_input_hint">手动输入车辆编码</string>
    <string name="sure">确定</string>
    <string name="camera_light">手电筒</string>
    <string name="camera_rfid">RFID</string>
    <string name="scan_result_car">车辆编号：\n所属单位：\n使用状况：\n车辆状况：</string>
    <string name="warning_detail_data">操作员：\n时间：\n地点：\n事件：</string>
    <string name="scan_result_car_content">XXXXXXXX\n机务部\n未绑定\n即将保养\电量不足</string>
    <string name="scan_result_car_id">车辆编号：</string>
    <string name="scan_result_car_use">使用状况：</string>
    <string name="scan_result_car_status">车辆状况：</string>
    <string name="scan_result_car_bit">单位：</string>
    <string name="setting">设置</string>
    <string name="setting_current_ip">当前IP</string>
    <string name="setting_ip">设置IP</string>
    <string name="setting_port">设置端口</string>
    <string name="setting_login_out">退出登录</string>
    <string name="setting_new_port">新端口</string>
    <string name="setting_new_port_input">请输入端口</string>
    <string name="setting_new_ip">新IP</string>
    <string name="setting_new_ip_input">请输入IP</string>
    <string name="sure_r">确认</string>
    <string name="check_location_input_car_code">请输入车辆编码</string>
    <string name="sure_commit">确认提交</string>
    <string name="wxby_update_hint">请上传车辆编码</string>
    <string name="wxby_update_hint_need">（必填）</string>
    <string name="wxby_scan">扫码</string>
    <string name="wxby_update_input_hint">请扫描识别车辆二维码，如二维码损坏支持手动输入</string>
    <string name="wxby_choice_car">请选择车辆维修/保养</string>
    <string name="wxby_choice_car_1">到期保养</string>
    <string name="wxby_choice_car_2">部件保养</string>
    <string name="wxby_choice_car_3">故障报修</string>
    <string name="wxby_choice_car_4">其他</string>
    <string name="wxby_face_back_input_hint">请输入您想反馈的问题</string>
    <string name="wxby_camera_hint">请拍摄需维修部件，便于平台更快审核</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="take_photo">拍照</string>
    <string name="photo_album">从手机相册选择</string>
    <string name="personal_title">人员列表</string>
</resources>