<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    style="@style/common_gray_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/camera_txt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/little_title_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_line2" />

    <TextView
        android:id="@+id/from_gallery_txt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/photo_album"
        android:textColor="@color/little_title_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_line2" />

    <TextView
        android:id="@+id/cancel_txt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/little_title_color"
        android:textSize="15sp" />

</LinearLayout>
