<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_new_ip"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_25"
            android:textSize="@dimen/text_size_19"
            android:textColor="@color/text_black"
            />

        <EditText
            android:id="@+id/et_input_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_21"
            android:layout_marginLeft="@dimen/dp_9"
            android:layout_marginRight="@dimen/dp_9"
            android:background="@drawable/dialog_input_bg"
            android:textColorHint="@color/item_line"
            android:textColor="@color/item_line"
            android:textSize="@dimen/text_size_10"
            android:hint="@string/setting_new_ip_input"
            android:gravity="center"
            />

        <LinearLayout
            android:id="@+id/confirm_cancel_button_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_36"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginBottom="@dimen/dp_29"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="@dimen/text_size_13"
                android:textStyle="bold"
                android:textColor="@color/dialog_black"
                android:layout_marginRight="@dimen/dp_8"
                android:background="@drawable/dialog_cancel_bg" />

            <TextView
                android:id="@+id/dialog_sure_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure_r"
                android:textSize="@dimen/text_size_13"
                android:layout_marginLeft="@dimen/dp_8"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/dialog_sure_bg" />
        </LinearLayout>
    </LinearLayout>
</layout>