<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_27"
            android:layout_marginBottom="@dimen/dp_21">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_detail_data"
                android:textColor="@color/text_black"
                android:lineSpacingExtra="@dimen/text_size_12"
                android:textSize="@dimen/text_size_13" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_result_car_content"
                android:textColor="@color/text_black"
                android:layout_marginLeft="@dimen/dp_60"
                android:gravity="left"
                android:maxLines="4"
                android:lineSpacingExtra="@dimen/text_size_18"
                android:textSize="@dimen/text_size_10" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1_px"
            android:layout_marginTop="@dimen/dp_17"
            android:background="@color/bg"/>
        
        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:text="@string/sure"
            android:gravity="center"
            android:textSize="@dimen/text_size_13"
            android:textColor="@color/dialog_warning_sure"
            />
    </LinearLayout>
</layout>