<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">

        <com.yt.bleandnfc.ui.view.CommonTitleBarView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_txt="@string/login"
            app:title_bg_show="false"
            app:left_iv_show="false"
            />
        <!--<RelativeLayout
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>-->
        
        <ImageView
            android:id="@+id/iv_company"
            android:layout_below="@+id/title_view"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_106"
            android:src="@drawable/login_logo_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_24"
            />
        
        <TextView
            android:id="@+id/tv_company"
            android:layout_below="@+id/iv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:layout_marginTop="@dimen/dp_22"
            android:layout_centerHorizontal="true"
            android:text="@string/login_company_name"
            />
        
        <RelativeLayout
            android:id="@+id/rl_email"
            android:layout_below="@+id/tv_company"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginRight="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_26">
            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_11"
                android:background="@drawable/login_email_icon"
                />
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_input_username"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_toRightOf="@+id/iv_email"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1_px"
                android:background="@color/white"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rl_pwd"
            android:layout_below="@+id/rl_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginRight="@dimen/dp_27">
            <ImageView
                android:id="@+id/iv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_11"
                android:background="@drawable/login_pwd_icon"
                />
            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_input_pwd"
                android:textSize="@dimen/text_size_12"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_toRightOf="@+id/iv_pwd"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1_px"
                android:background="@color/white"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        
        <TextView
            android:id="@+id/tv_login"
            android:layout_below="@+id/rl_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/login"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/login_btn_bg"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginRight="@dimen/dp_27"
            android:gravity="center"
            android:textSize="@dimen/text_size_20"
            android:textColor="@color/login_blue"
            />

        <CheckBox
            android:id="@+id/cb_save_info"
            android:layout_below="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/login_save_username"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_8"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dp_7"
            android:button="@drawable/login_save_selector"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_10"
            android:text="@string/login_bottom_company_name"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_37"
            />
    </RelativeLayout>
</layout>