<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/common_dialog_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="#ffffff"
            android:visibility="visible">

            <TextView
                android:id="@+id/remind_content_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray_line" />

            <LinearLayout
                android:id="@+id/confirm_cancel_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_confirm_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:gravity="center"
                    android:text="@string/exit"
                    android:textColor="#A0A0A0"
                    android:textSize="16sp"
                    android:background="@drawable/remind_dialog_cancel_bg" />

                <View
                    android:id="@+id/line"
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_line" />

                <TextView
                    android:id="@+id/dialog_cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#088BE7"
                    android:textSize="16sp"
                    android:background="@drawable/remind_dialog_confirm_bg" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>